examples/test/testpolicy16246.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16246
  namespace: namespace447
spec:
  podSelector:
    matchLabels:
      key48: value12
      key14: value45
      key22: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value3
      podSelector:
        matchLabels:
          key49: value20
          key9: value17
          key13: value30
